# coq-depleted

./: .gitignore  Optics.v  _CoqProject  adjunction.v  bounds.v  coq-depleted.opam  dune-project  monoidal.v  proset.v
experiments/: dune  natded.v  pointless.v  propositional.v
theories/: adjunction.v  bounds.v  down.v  dune  monoidal.v  omniscience.v  proset.v
